<resources>
    <string name="app_name">Clicker</string>
    <string name="counter_title">Clicks</string>
    <string name="Click_button">Click!</string>
    <string name="Click_land_left_button">Left click!</string>
    <string name="Click_land_right_button">Right click!</string>
    <string name="shop_button">Shop</string>
    <string name="exit_button">Close the app</string>
    <string name="back_button">Back to main screen</string>
    <string name="web_link">Play Cookie Clicker</string>
    <string name="shop_item_tired_finger">Tired finger</string>
    <string name="shop_buy">Summon</string>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tired_finger_desc">This finger will click once every 10 seconds.</string>
    <string name="shopItemName">Finger</string>
    <string name="shopItemCostTitle">Cost</string>
    <string name="shopItemOwnedTitle">Summoned</string>
    <string name="reset_game">Reset the game</string>
</resources>